FIX, Gaming demo was not committing on drag element, no more scrollbars!

--- a/jWebSocketClient/web/demos/jwsGaming/css/jwsGaming.css
+++ b/jWebSocketClient/web/demos/jwsGaming/css/jwsGaming.css
@@ -70,7 +70,7 @@
     -moz-border-radius: 0px 0px 6px 6px;
     -webkit-border-radius: 0px 0px 6px 6px;
     border-radius: 0px 0px 6px 6px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .player{
